Prevent whitespace in cta links in widget from wrapping.

--- a/assets/sass/components/dashboard/_googlesitekit-DashboardPageSpeed.scss
+++ b/assets/sass/components/dashboard/_googlesitekit-DashboardPageSpeed.scss
@@ -18,6 +18,11 @@
 
 .googlesitekit-pagespeed-widget {
 
+	.googlesitekit-cta-link {
+
+		white-space: nowrap;
+	}
+
 	.googlesitekit-table {
 
 		border-spacing: 0;
